--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "grunt-contrib-nodeunit": "~0.4.1"
   },
   "devDependencies": {
+    "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
     "cucumber": "^0.5.2",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
